Enhance controller logic.
